--- a/index.html
+++ b/index.html
@@ -641,11 +641,11 @@ footer {
 
   <div class="slider-wrapper">
     <div class="slider">
-      <div class="slide"><img src="pc_お困りごと.png"></div>
-      <div class="slide"><img src="pc_ノワールの得意なこと.png"></div>
-      <div class="slide"><img src="pc_多様な専門職が在籍.png"></div>
-      <div class="slide"><img src="pc_支援の内容.png"></div>
-      <div class="slide"><img src="pc_生活面での不安や.png"></div>
+      <div class="slide"><img src="お困りごと.png"></div>
+      <div class="slide"><img src="ノワールの得意なこと.png"></div>
+      <div class="slide"><img src="多様な専門職が在籍.png"></div>
+      <div class="slide"><img src="支援の内容.png"></div>
+      <div class="slide"><img src="生活面での不安や.png"></div>
     </div>
   </div>
 
@@ -656,12 +656,12 @@ footer {
 <div class="slider-section sp-only">
   <div class="slider-wrapper">
     <div class="slider">
-      <div class="slide"><img src="sp_お困りごとスマホ.png"></div>
-      <div class="slide"><img src="sp_ノワールの得意なことスマホ.png"></div>
-      <div class="slide"><img src="sp_支援の内容スマホ1.png"></div>
-      <div class="slide"><img src="sp_支援の内容スマホ2.png"></div>
-      <div class="slide"><img src="sp_多様な専門職が在籍スマホ.png"></div>
-      <div class="slide"><img src="sp_生活面での不安やスマホ.png"></div>
+      <div class="slide"><img src="お困りごとスマホ.png"></div>
+      <div class="slide"><img src="ノワールの得意なことスマホ.png"></div>
+      <div class="slide"><img src="支援の内容スマホ1.png"></div>
+      <div class="slide"><img src="支援の内容スマホ2.png"></div>
+      <div class="slide"><img src="多様な専門職が在籍スマホ.png"></div>
+      <div class="slide"><img src="生活面での不安やスマホ.png"></div>
     </div>
   </div>
 </div>
