--- a/index.html
+++ b/index.html
@@ -775,6 +775,7 @@ if (pcSliderSection) {
   const slides = pcSliderSection.querySelectorAll('.slide');
   const prevBtn = pcSliderSection.querySelector('.slide-arrow.left');
   const nextBtn = pcSliderSection.querySelector('.slide-arrow.right');
+  const dotsContainer = pcSliderSection.querySelector('.slider-dots');
  
   let index = 0;
 
