--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ h2 {
 .slider-section {
   max-width: 920px;                 /* 画像幅に合わせる */
   margin: 15px auto 0;
-  padding: 0;
+  padding-bottom: 26px;
   overflow: hidden;                 /* はみ出し防止 */
   background: rgba(255,255,255,0.4);
   position: relative;
@@ -287,10 +287,11 @@ h2 {
    ドットナビ
 ================================================= */
 .slider-dots {
-  display: flex;
-  justify-content: center;
-  gap: 8px;
-  margin-top: 12px;
+  position: absolute;
+  left: 50%;
+  bottom: 6px;           /* ← 画像の外側 */
+  transform: translateX(-50%);
+  margin-top: 0;
 }
 
 .slider-dots button {
