--- a/index.html
+++ b/index.html
@@ -292,6 +292,8 @@ h2 {
   bottom: 6px;           /* ← 画像の外側 */
   transform: translateX(-50%);
   margin-top: 0;
+  display: flex;
+  gap: 14px;
 }
 
 .slider-dots button {
