--- a/index.html
+++ b/index.html
@@ -518,6 +518,7 @@ h2 {
   width: 100%;
   height: 100%;
   display: block;
+  background: #fff;
 }
 
 /* ------------------ お問い合わせ ------------------ */
