--- a/index.html
+++ b/index.html
@@ -513,12 +513,12 @@ h2 {
 
 .map-wrapper iframe {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  top: -1px;
+  left: -1px;
+  width: calc(100% + 2px);
+  height: calc(100% + 2px);
+  border: 0;
   display: block;
-  background: #fff;
 }
 
 /* ------------------ お問い合わせ ------------------ */
