--- a/index.html
+++ b/index.html
@@ -61,12 +61,14 @@ h2 {
 }
 
 .header-center {
+  font-family: 'Kiwi Maru', cursive;
   text-align: center;
   font-size: 1.7em;
   font-weight: bold;
   color: #675340;
   letter-spacing: 0.15em;
   text-shadow: 0 2px 6px rgba(0,0,0,0.15);
+  
 }
 
 /* ===== メニュー ===== */
