--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ h2 {
   text-align: center;
   font-size: 1.8em;
   font-family: 'M PLUS Rounded 1c', sans-serif;
-  color: #9F987D;
+  color: #675340;
   position: relative;
   display: inline-block;
   margin-top: 70px;
@@ -435,7 +435,7 @@ h2 {
   background: rgba(255,255,255,0.85);
   border-radius: 20px;
   text-align: left;
-  color: #9F987D;
+  color: #675340;
 }
 
 /* タイトル（ご利用料金と揃える） */
