--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 html { scroll-behavior: smooth; }
 
 body {
-  font-family: 'M PLUS Rounded 1c', sans-serif;
+  font-family: 'Kiwi Maru', cursive;
   background-color: #fff;
   color: #9F987D;
   margin: 0;
@@ -315,7 +315,7 @@ h2 {
   width: 100%;
   text-align: center;
   font-size: 1.8em;
-  font-family: 'M PLUS Rounded 1c', sans-serif;
+  font-family: 'Kiwi Maru', cursive;
   color: #675340;
   position: relative;
   display: inline-block;
@@ -436,6 +436,7 @@ h2 {
   border-radius: 20px;
   text-align: left;
   color: #675340;
+  font-family: 'Kiwi Maru', cursive;
 }
 
 /* タイトル（ご利用料金と揃える） */
