--- a/index.html
+++ b/index.html
@@ -360,58 +360,67 @@ h2 {
     display: none;
   }
 
-  /* トグルコンテナを中央寄せ */
-  .toggle-container流れ,
-  .toggle-container料金 {
-    text-align: center;
-    margin: 40px 0;
-  }
-    
-  /* ボタン：元デザインを活かす */
-  .toggle-button流れ,
-  .toggle-button料金 {
-    display: inline-flex;          /* ← 中央＆中身揃う */
-    align-items: center;
-    justify-content: center;
-    gap: 8px;                      /* 文字と矢印の間 */
-    font-size: 18px;
-    padding: 10px 18px;
-    border-radius: 10px;           /* ← 元の雰囲気 */
-    border: 1px solid #ccc;
-    background: rgba(255,255,255,0.6);
-    color: #9F987D;
-    font-family: 'M PLUS Rounded 1c', sans-serif;
-    cursor: pointer;
-    margin: 0 auto 10px;           /* ← 真ん中 */
-  }
-
-  /* 矢印は必ず見えるように */
-  .toggle-button流れ span,
-  .toggle-button料金 span {
-    display: inline-block;
-    font-size: 0.9em;
-    transform: scaleX(1.5);
-  }
-
- .arrow流れ,
- .arrow料金 {
-  font-family: 'Arial', sans-serif;
+/* ===== トグル全体を中央寄せ ===== */
+.toggle-container流れ,
+.toggle-container料金 {
+  text-align: center;
+  margin: 40px 0;
 }
 
-  /* 中身はトグル */
- .content流れ,
- .content料金 {
+/* ===== トグルボタン ===== */
+.toggle-button流れ,
+.toggle-button料金 {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+
+  font-size: 18px;
+  padding: 10px 18px;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+
+  background: rgba(255,255,255,0.6);
+  color: #9F987D;
+  font-family: 'M PLUS Rounded 1c', sans-serif;
+
+  cursor: pointer;
+  margin: 0 auto 10px;
+}
+
+/* ===== 矢印だけ ===== */
+.arrow流れ,
+.arrow料金 {
+  display: inline-block;
+  font-family: Arial, sans-serif; /* ← 矢印専用フォント */
+  font-size: 0.9em;
+  transform: scaleX(1.5);
+  transition: transform 0.3s ease;
+}
+
+/* 開いたときの矢印 */
+.arrow流れ.rotate,
+.arrow料金.rotate {
+  transform: scaleX(1.5) rotate(180deg);
+}
+
+/* ===== トグル中身 ===== */
+.content流れ,
+.content料金 {
   display: none;
   opacity: 0;
   transform: translateY(20px);
   filter: blur(6px);
+
   transition:
     opacity 0.5s ease,
     transform 0.5s ease,
     filter 0.5s ease;
+
   text-align: center;
 }
 
+/* 表示状態 */
 .content流れ.show,
 .content料金.show {
   display: block;
@@ -420,12 +429,12 @@ h2 {
   filter: blur(0);
 }
 
-  /* スマホ画像 */
-  .content流れ img,
-  .content料金 img {
-    width: 100%;
-    max-width: 100%;
-  }
+/* ===== 中の画像（スマホ対応） ===== */
+.content流れ img,
+.content料金 img {
+  width: 100%;
+  max-width: 100%;
+  height: auto;
 }
 /* ------------------ アクセス ------------------ */
 .access-section {
