--- a/index.html
+++ b/index.html
@@ -348,11 +348,21 @@ h2 {
   justify-content: center;
 }
 
+@media (min-width: 481px) {
+  .content流れ,
+  .content料金 {
+    opacity: 1 !important;
+    transform: none !important;
+    filter: none !important;
+  }
+}
+  
 .content流れ img,
 .content料金 img {
   width: 70%;
   max-width: 600px;
 }
+  
 @media (max-width: 480px) {
 
   /* PC用タイトルは消す */
@@ -502,11 +512,13 @@ h2 {
 }
 
 .zip {
-  font-size: 1em;   /* 郵便番号小さめ */
+  font-size: 1em;
 }
-  
+
 @media (max-width: 480px) {
-  font-size: 0.8em;
+  .zip {
+    font-size: 0.8em;
+  }
 }
   
 .address {
@@ -601,21 +613,6 @@ footer {
   font-family: 'Kiwi Maru', cursive;
 }
   
-  /* ===== 矢印 回転用 ===== */
-.arrow流れ,
-.arrow料金 {
-  display: inline-block;
-  margin-left: 8px;
-  font-size: 0.8em;
-  transform: scaleX(1.4);
-  transition: transform 0.3s ease;
-}
-
-/* 開いたとき */
-.arrow流れ.rotate,
-.arrow料金.rotate {
-  transform: scaleX(1.4) rotate(180deg);
-}
 </style>
 </head>
 
