--- a/index.html
+++ b/index.html
@@ -458,10 +458,9 @@ h2 {
   font-family: 'Kiwi Maru', cursive;
 }
 
-/* タイトル（ご利用料金と揃える） */
 .access-title {
   text-align: center;
-  margin: 80px 0 10px;
+  margin: 80px 0 20px;
 }
 
 .access-title span {
@@ -470,14 +469,15 @@ h2 {
   font-size: 1.8em;
 }
 
+/* うっすら下マーカー */
 .access-title span::before {
   content: "";
   position: absolute;
-  left: -25px;
+  left: -20px;
   bottom: 6px;
   width: 100%;
   height: 0.6em;
-  background: rgba(169,169,169,0.25);
+  background: rgba(159, 152, 125, 0.25);
   z-index: -1;
   border-radius: 8px;
 }
