--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@ h2 {
 }
 
   .pc-title::before {
- content: "";
+  content: "";
   position: absolute;
   left: -25px;
   bottom: 6px;
@@ -463,21 +463,15 @@ h2 {
   margin: 80px 0 20px;
 }
 
-.access-title span {
-  position: relative;
-  display: inline-block;
-  font-size: 1.8em;
-}
-
 /* うっすら下マーカー */
-.access-title span::before {
+.access-title::before {
   content: "";
   position: absolute;
-  left: -20px;
+  left: -25px;
   bottom: 6px;
   width: 100%;
   height: 0.6em;
-  background: rgba(159, 152, 125, 0.25);
+  background: rgba(169,169,169,0.25);
   z-index: -1;
   border-radius: 8px;
 }
@@ -726,9 +720,7 @@ footer {
       </div>
     </div>
 
-<h2 class="access-title" id="access">
-  <span>アクセス</span>
-</h2>
+<h2 class="access-title" id="access">アクセス</span></h2>
 <section class="access-section">
   <p class="access-text">
   <span class="zip">〒950-0861</span><br>
