--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@ footer {
       </div>
     </div>
 
-<h2 class="access-title" id="access">アクセス</span></h2>
+<h2 class="access-title" id="access">アクセス</h2>
 <section class="access-section">
   <p class="access-text">
   <span class="zip">〒950-0861</span><br>
