--- a/index.html
+++ b/index.html
@@ -221,7 +221,6 @@ h2 {
   }
 }
 
-
 /* =================================================
    スライダー本体（横スクロール）
 ================================================= */
@@ -316,7 +315,7 @@ h2 {
   text-align: center;
   font-size: 1.8em;
   font-family: 'Kiwi Maru', cursive;
-  color: #675340;
+  color: #6f6060;
   position: relative;
   display: inline-block;
   margin-top: 70px;
@@ -457,13 +456,18 @@ h2 {
   color: #675340;
   font-family: 'Kiwi Maru', cursive;
 }
-
 .access-title {
+  width: 100%;
   text-align: center;
-  margin: 80px 0 20px;
+  font-size: 1.8em;
+  font-family: 'M PLUS Rounded 1c', sans-serif;
+  color: #6f6060;
+  position: relative;
+  display: inline-block;
+  margin-top: 70px;
+  margin-bottom: 15px;
 }
 
-/* うっすら下マーカー */
 .access-title::before {
   content: "";
   position: absolute;
