--- a/index.html
+++ b/index.html
@@ -308,58 +308,82 @@ h2 {
 .slider-dots button.active {
   background: #9F987D;
 }
-/* ------------------ トグル ------------------ */
-/* PC用タイトル */
-.pc-title {
-  width: 100%;
-  text-align: center;
-  font-size: 1.8em;
-  font-family: 'Kiwi Maru', cursive;
-  color: #6f6060;
-  position: relative;
-  display: inline-block;
-  margin-top: 70px;
-  margin-bottom: 15px;
-}
+/* ===============================
+   トグル（PC基準）
+=============================== */
 
-  .pc-title::before {
-  content: "";
-  position: absolute;
-  left: -25px;
-  bottom: 6px;
-  width: 100%;
-  height: 0.6em;
-  background: rgba(169,169,169,0.25);
-  z-index: -1;
-  border-radius: 8px;
-}
-
-/* PCではボタン不要 */
-.toggle-button流れ,
-.toggle-button料金 {
+/* PC：ボタンは使わない */
+.toggle-container流れ,
+.toggle-container料金 {
   display: none;
 }
 
-/* PCでは常に表示＆中央 */
+/* PC：中身は最初から表示 */
 .content流れ,
 .content料金 {
-  display: flex;
-  justify-content: center;
+  display: block;
+  opacity: 1;
+  transform: none;
+  filter: none;
+  text-align: center;
 }
 
-@media (min-width: 481px) {
-  .content流れ,
-  .content料金 {
-    opacity: 1 !important;
-    transform: none !important;
-    filter: none !important;
-  }
-  
+/* 画像 */
 .content流れ img,
 .content料金 img {
-  width: 70%;
-  max-width: 600px;
+  width: 100%;
+  max-width: 100%;
 }
+
+/* ===============================
+   スマホだけトグル化
+=============================== */
+@media screen and (max-width: 767px) {
+
+  /* スマホ：ボタン表示 */
+  .toggle-container流れ,
+  .toggle-container料金 {
+    display: block;
+    text-align: center;
+    margin: 40px 0;
+  }
+
+  .toggle-button流れ,
+  .toggle-button料金 {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+    font-size: 18px;
+    padding: 10px 18px;
+    border-radius: 10px;
+    border: 1px solid #ccc;
+    background: rgba(255,255,255,0.6);
+    color: #9F987D;
+    font-family: 'M PLUS Rounded 1c', sans-serif;
+    cursor: pointer;
+  }
+
+  /* スマホ：最初は閉じる */
+  .content流れ,
+  .content料金 {
+    display: none;
+    opacity: 0;
+    transform: translateY(20px);
+    filter: blur(6px);
+    transition:
+      opacity 0.5s ease,
+      transform 0.5s ease,
+      filter 0.5s ease;
+  }
+
+  .content流れ.show,
+  .content料金.show {
+    display: block;
+    opacity: 1;
+    transform: translateY(0);
+    filter: blur(0);
+  }
 }
 
 @media (max-width: 480px) {
