--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ h2 {
 /* PC：ボタンは使わない */
 .toggle-container流れ,
 .toggle-container料金 {
-  display: none;
+  display: block;
 }
 
 /* PC：中身は最初から表示 */
