--- a/index.html
+++ b/index.html
@@ -567,6 +567,7 @@ h2 {
   margin: 80px 0 20px;
   position: relative;
   display: block;
+  font-family: 'Kiwi Maru', cursive;
 }
 
 .contact-title::before {
@@ -597,7 +598,7 @@ h2 {
   color: #9F987D;
   background: rgba(255,255,255,0.85);
   border: 2px solid #9F987D;
-  border-radius: 999px;   /* ← やさしい丸 */
+  border-radius: 20px;
   text-decoration: none;
   transition: all 0.3s ease;
 }
