--- a/index.html
+++ b/index.html
@@ -592,13 +592,13 @@ h2 {
 
 .contact-cta a {
   display: inline-block;
-  padding: 14px 36px;
-  font-size: 1.1em;
+  padding: 10px 18px;
+  font-size: 18px
   font-family: 'M PLUS Rounded 1c', sans-serif;
   color: #9F987D;
-  background: rgba(255,255,255,0.85);
-  border: 2px solid #9F987D;
-  border-radius: 20px;
+  background: rgba(255,255,255,0.6);
+  border: 1px solid #ccc;
+  border-radius: 10px;
   text-decoration: none;
   transition: all 0.3s ease;
 }
