--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@ h2 {
   text-align: center;
   font-size: 1.8em;
   font-family: 'Kiwi Maru', cursive;
-  color: #6f6060;
+  color: #675340;
   position: relative;
   display: inline-block;
   margin-top: 70px;
@@ -528,12 +528,12 @@ h2 {
 }
 
 .zip {
-  font-size: 1em;
+  font-size: 1.1em;
 }
 
 @media (max-width: 480px) {
   .zip {
-    font-size: 0.8em;
+    font-size: 0.9em;
   }
 }
   
@@ -568,6 +568,7 @@ h2 {
   position: relative;
   display: block;
   font-family: 'Kiwi Maru', cursive;
+  color: #675340;
 }
 
 .contact-title::before {
@@ -613,8 +614,8 @@ h2 {
 @media (max-width: 480px) {
   .contact-cta a {
     width: 80%;
-    padding: 14px 0;
-    font-size: 1.05em;
+    padding: 10px 0;
+    font-size: 18px;
   }
 }
   
