--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@ h2 {
   display: block;
   position: relative;
   z-index: 1;
-  9F987D
+  color: #9F987D;
   font-family: 'M PLUS Rounded 1c', sans-serif;
 }
 
