--- a/index.html
+++ b/index.html
@@ -470,15 +470,15 @@ h2 {
   background: rgba(255,255,255,0.85);
   border-radius: 20px;
   text-align: left;
-  color: #675340;
+  color: #9F987D;
   font-family: 'M PLUS Rounded 1c', sans-serif;
 }
 .access-title {
   width: 100%;
   text-align: center;
-  font-size: 1.8em;
+  font-size: 1.6em;
   font-family: 'Kiwi Maru', cursive;
-  color: #675340;
+  color: #807070;
   position: relative;
   display: inline-block;
   margin-top: 70px;
@@ -488,7 +488,7 @@ h2 {
 .access-title::before {
   content: "";
   position: absolute;
-  left: -25px;
+  left: -35px;
   bottom: 6px;
   width: 100%;
   height: 0.6em;
@@ -563,18 +563,18 @@ h2 {
 .contact-title {
   width: 100%;
   text-align: center;
-  font-size: 1.8em;
+  font-size: 1.6em;
   margin: 80px 0 20px;
   position: relative;
   display: block;
   font-family: 'Kiwi Maru', cursive;
-  color: #675340;
+  color: #807070;
 }
 
 .contact-title::before {
   content: "";
   position: absolute;
-  left: -25px;
+  left: -35px;
   bottom: 6px;
   width: 100%;
   height: 0.6em;
