--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@ h2 {
   
 .contact-cta {
   text-align: center;
-  margin: 50px 0 70px;
+  margin: 50px 0 40px;
   display: block;
   position: relative;
   z-index: 1;
@@ -597,6 +597,7 @@ h2 {
   display: inline-block;
   padding: 10px 10px;
   font-size: 18px
+  color: #9F987D;
   background: rgba(255,255,255,0.6);
   border: 1px solid #ccc;
   border-radius: 10px;
