--- a/index.html
+++ b/index.html
@@ -589,14 +589,13 @@ h2 {
   display: block;
   position: relative;
   z-index: 1;
-  color: #9F987D;
   font-family: 'M PLUS Rounded 1c', sans-serif;
 }
 
 .contact-cta a {
   display: inline-block;
   padding: 10px 10px;
-  font-size: 18px
+  font-size: 18px;
   color: #9F987D;
   background: rgba(255,255,255,0.6);
   border: 1px solid #ccc;
