--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@ h2 {
   background: rgba(255,255,255,0.85);
   border-radius: 20px;
   text-align: left;
-  color: #9F987D;
+  color: #635656;
   font-family: 'M PLUS Rounded 1c', sans-serif;
 }
 .access-title {
