--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@ h2 {
   text-align: center;
   font-size: 1.6em;
   font-family: 'Kiwi Maru', cursive;
-  color: #807070;
+  color: #7D7D7D;
   position: relative;
   display: inline-block;
   margin-top: 70px;
