--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@ h2 {
   position: relative;
   display: block;
   font-family: 'Kiwi Maru', cursive;
-  color: #807070;
+  color: #8b8484;
 }
 
 .contact-title::before {
