--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@ h2 {
 @media (max-width: 480px) {
   .contact-cta a {
     width: 80%;
-    padding: 10px 0;
+    padding: 10px 18px;
     font-size: 18px;
   }
 }
