--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@ h2 {
 }
 
 .contact-cta a:hover {
-  background: #9F987D;
+  background: #b5a695;
   color: #fff;
   transform: translateY(-2px);
 }
