--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@ h2 {
    トグル（PC基準）
 =============================== */
 
-/* PC：ボタンだけ消す */
+/* PC：ボタンは非表示 */
 .toggle-button流れ,
 .toggle-button料金 {
   display: none;
@@ -333,7 +333,7 @@ h2 {
 =============================== */
 @media screen and (max-width: 767px) {
 
-  /* スマホ：ボタン表示 */
+  /* トグル全体 */
   .toggle-container流れ,
   .toggle-container料金 {
     display: block;
@@ -341,23 +341,43 @@ h2 {
     margin: 40px 0;
   }
 
+  /* ボタン表示 */
   .toggle-button流れ,
   .toggle-button料金 {
     display: inline-flex;
     align-items: center;
     justify-content: center;
     gap: 8px;
+
     font-size: 18px;
     padding: 10px 18px;
     border-radius: 10px;
     border: 1px solid #ccc;
+
     background: rgba(255,255,255,0.6);
     color: #9F987D;
     font-family: 'M PLUS Rounded 1c', sans-serif;
+
     cursor: pointer;
+    margin: 0 auto 10px;
   }
 
-  /* スマホ：最初は閉じる */
+  /* 矢印 */
+  .arrow流れ,
+  .arrow料金 {
+    display: inline-block;
+    font-family: Arial, sans-serif;
+    font-size: 0.9em;
+    transform: scaleX(1.5);
+    transition: transform 0.3s ease;
+  }
+
+  .arrow流れ.rotate,
+  .arrow料金.rotate {
+    transform: scaleX(1.5) rotate(180deg);
+  }
+
+  /* 中身：最初は閉じる */
   .content流れ,
   .content料金 {
     display: none;
@@ -368,8 +388,11 @@ h2 {
       opacity 0.5s ease,
       transform 0.5s ease,
       filter 0.5s ease;
+
+    text-align: center;
   }
 
+  /* 開いた状態 */
   .content流れ.show,
   .content料金.show {
     display: block;
@@ -379,83 +402,7 @@ h2 {
   }
 }
 
-@media (max-width: 480px) {
-
-  /* PC用タイトルは消す */
-  .pc-title {
-    display: none;
-  }
-  }
-/* ===== トグル全体を中央寄せ ===== */
-.toggle-container流れ,
-.toggle-container料金 {
-  text-align: center;
-  margin: 40px 0;
-}
-
-/* ===== トグルボタン ===== */
-.toggle-button流れ,
-.toggle-button料金 {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  gap: 8px;
-
-  font-size: 18px;
-  padding: 10px 18px;
-  border-radius: 10px;
-  border: 1px solid #ccc;
-
-  background: rgba(255,255,255,0.6);
-  color: #9F987D;
-  font-family: 'M PLUS Rounded 1c', sans-serif;
-
-  cursor: pointer;
-  margin: 0 auto 10px;
-}
-
-/* ===== 矢印だけ ===== */
-.arrow流れ,
-.arrow料金 {
-  display: inline-block;
-  font-family: Arial, sans-serif; /* ← 矢印専用フォント */
-  font-size: 0.9em;
-  transform: scaleX(1.5);
-  transition: transform 0.3s ease;
-}
-
-/* 開いたときの矢印 */
-.arrow流れ.rotate,
-.arrow料金.rotate {
-  transform: scaleX(1.5) rotate(180deg);
-}
-
-/* ===== トグル中身 ===== */
-.content流れ,
-.content料金 {
-  display: none;
-  opacity: 0;
-  transform: translateY(20px);
-  filter: blur(6px);
-
-  transition:
-    opacity 0.5s ease,
-    transform 0.5s ease,
-    filter 0.5s ease;
-
-  text-align: center;
-}
-
-/* 表示状態 */
-.content流れ.show,
-.content料金.show {
-  display: block;
-  opacity: 1;
-  transform: translateY(0);
-  filter: blur(0);
-}
-
-/* ===== 中の画像（スマホ対応） ===== */
+/* ===== 中の画像（共通） ===== */
 .content流れ img,
 .content料金 img {
   width: 100%;
