--- a/index.html
+++ b/index.html
@@ -409,6 +409,25 @@ h2 {
   max-width: 100%;
   height: auto;
 }
+  /* ===== PC表示の最終調整 ===== */
+@media (min-width: 768px) {
+
+  .toggle-container流れ,
+  .toggle-container料金 {
+    margin: 60px auto;
+    text-align: center;
+  }
+
+  .pc-title {
+    margin-bottom: 30px;
+    font-size: 1.6em;
+  }
+
+  .content流れ,
+  .content料金 {
+    margin-top: 0;
+  }
+}
 /* ------------------ アクセス ------------------ */
 .access-section {
   max-width: 900px;
