--- a/index.html
+++ b/index.html
@@ -309,16 +309,22 @@ h2 {
   background: #9F987D;
 }
 /* ===============================
-   トグル（PC基準）
+   トグル：PCが正解
 =============================== */
 
-/* PC：ボタンは非表示 */
+.toggle-container流れ,
+.toggle-container料金 {
+  text-align: center;
+  margin: 60px auto;
+}
+
+/* PCではボタン不要 */
 .toggle-button流れ,
 .toggle-button料金 {
   display: none;
 }
 
-/* PC：中身は常に表示 */
+/* PCでは常に表示 */
 .content流れ,
 .content料金 {
   display: block;
@@ -328,56 +334,40 @@ h2 {
   text-align: center;
 }
 
+/* PC用 画像サイズ */
+.content流れ img,
+.content料金 img {
+  max-width: 720px;
+  width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+}
+
 /* ===============================
    スマホだけトグル化
 =============================== */
-@media screen and (max-width: 767px) {
+@media (max-width: 767px) {
 
-  /* トグル全体 */
-  .toggle-container流れ,
-  .toggle-container料金 {
-    display: block;
-    text-align: center;
-    margin: 40px 0;
-  }
-
-  /* ボタン表示 */
+  /* ボタンを出す */
   .toggle-button流れ,
   .toggle-button料金 {
     display: inline-flex;
     align-items: center;
     justify-content: center;
     gap: 8px;
-
     font-size: 18px;
     padding: 10px 18px;
     border-radius: 10px;
     border: 1px solid #ccc;
-
     background: rgba(255,255,255,0.6);
     color: #9F987D;
     font-family: 'M PLUS Rounded 1c', sans-serif;
-
     cursor: pointer;
     margin: 0 auto 10px;
   }
 
-  /* 矢印 */
-  .arrow流れ,
-  .arrow料金 {
-    display: inline-block;
-    font-family: Arial, sans-serif;
-    font-size: 0.9em;
-    transform: scaleX(1.5);
-    transition: transform 0.3s ease;
-  }
-
-  .arrow流れ.rotate,
-  .arrow料金.rotate {
-    transform: scaleX(1.5) rotate(180deg);
-  }
-
-  /* 中身：最初は閉じる */
+  /* スマホでは最初閉じる */
   .content流れ,
   .content料金 {
     display: none;
@@ -388,64 +378,15 @@ h2 {
       opacity 0.5s ease,
       transform 0.5s ease,
       filter 0.5s ease;
-
-    text-align: center;
   }
 
-  /* 開いた状態 */
+  /* 開いたら表示 */
   .content流れ.show,
   .content料金.show {
     display: block;
     opacity: 1;
     transform: translateY(0);
     filter: blur(0);
-  }
-}
-
-/* ===== 中の画像（共通） ===== */
-.content流れ img,
-.content料金 img {
-  width: 100%;
-  max-width: 100%;
-  height: auto;
-}
-/* ===============================
-   PC用 応急処置（タイトル背景＋画像サイズ）
-=============================== */
-@media (min-width: 768px) {
-
-  /* ▼ タイトル（ご利用の流れ／料金） */
-  .pc-title {
-    display: inline-block;
-    position: relative;
-    font-size: 1.6em;
-    font-family: 'Kiwi Maru', cursive;
-    color: #8b8484;
-    margin-bottom: 30px;
-    padding: 0 10px;
-    text-align: center;
-  }
-
-  .pc-title::before {
-    content: "";
-    position: absolute;
-    left: -35px;
-    bottom: 6px;
-    width: 100%;
-    height: 0.6em;
-    background: rgba(169,169,169,0.25);
-    z-index: -1;
-    border-radius: 8px;
-  }
-
-  /* ▼ 画像がデカすぎるのを防ぐ */
-  .content流れ img,
-  .content料金 img {
-    max-width: 720px;   /* ← PCではこの幅まで */
-    width: 100%;
-    height: auto;
-    margin: 0 auto;
-    display: block;
   }
 }
 /* ------------------ アクセス ------------------ */
