--- a/index.html
+++ b/index.html
@@ -436,6 +436,7 @@ h2 {
   display: inline-block;
   margin-top: 70px;
   margin-bottom: 15px;
+  font-weight: 350;
 }
 
 .access-title::before {
@@ -522,6 +523,7 @@ h2 {
   display: block;
   font-family: 'Kiwi Maru', cursive;
   color: #8b8484;
+  font-weight: 350;
 }
 
 .contact-title::before {
@@ -547,7 +549,7 @@ h2 {
 
 .contact-cta a {
   display: inline-block;
-  padding: 10px 3px;
+  padding: 10px 6px;
   font-size: 18px;
   color: #9F987D;
   background: rgba(255,255,255,0.6);
