--- a/index.html
+++ b/index.html
@@ -415,7 +415,9 @@ h2 {
     filter: blur(0);
   }
 }
-/* ------------------ アクセス ------------------ */
+/* =================================================
+   アクセス
+================================================= */
 .access-section {
   max-width: 900px;
   margin: 30px auto 50px;
@@ -513,7 +515,9 @@ h2 {
   display: block;
 }
 
-/* ------------------ お問い合わせ ------------------ */
+/* =================================================
+   お問い合わせ
+================================================= */
 .contact-title {
   width: 100%;
   text-align: center;
@@ -598,8 +602,34 @@ h2 {
     margin-bottom: 20px;
   }
 }
+/* =================================================
+   自己評価
+================================================= */
+.pdf-section {
+  text-align: center;
+  margin: 40px 0 80px;
+  font-family: 'M PLUS Rounded 1c', sans-serif;
+}
 
-/* ------------------ フッター ------------------ */
+.pdf-link {
+  display: inline-block;
+  padding: 12px 20px;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+  background: rgba(255,255,255,0.6);
+  color: #9F987D;
+  text-decoration: none;
+  transition: all 0.3s ease;
+}
+
+.pdf-link:hover {
+  background: #b5a695;
+  color: #fff;
+  transform: translateY(-2px);
+}
+/* =================================================
+   フッター
+================================================= */
 footer {
   background: rgba(255,255,255,0.5);
   text-align: center;
@@ -725,6 +755,18 @@ footer {
   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSci9ClyPaBeHyqKnsIpgh6nGqeLRpV-x8E1sJ7C8qhSyth11Q/viewform?embedded=true" width="100%" height="700">
   </iframe>
 </section>
+
+  <h2 class="section-title">自己評価</h2>
+
+<div class="pdf-section">
+  <a
+    href="https://drive.google.com/file/d/【ファイルID】/view"
+    target="_blank"
+    class="pdf-link"
+  >
+    令和◯年度 自己評価（PDF）
+  </a>
+</div>
 
 <footer>
   <p class="small-text">
