--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ h2 {
   background: #9F987D;
 }
 /* ===============================
-   トグル：PCが正解
+   トグル：PC基準
 =============================== */
 
 .toggle-container流れ,
@@ -343,9 +343,7 @@ h2 {
   display: block;
   margin: 0 auto;
 }
-  /* ===============================
-   PC用：タイトル背景を他と統一
-=============================== */
+  
 .pc-title {
   width: 100%;
   text-align: center;
@@ -609,6 +607,31 @@ h2 {
   text-align: center;
   margin: 40px 0 80px;
   font-family: 'M PLUS Rounded 1c', sans-serif;
+}
+
+  .pdf-title {
+  width: 100%;
+  text-align: center;
+  font-size: 1.6em;
+  font-family: 'Kiwi Maru', cursive;
+  color: #8b8484;
+  position: relative;
+  display: inline-block;
+  margin-top: 70px;
+  margin-bottom: 15px;
+  font-weight: 350;
+}
+
+.pdf-title::before {
+  content: "";
+  position: absolute;
+  left: -35px;
+  bottom: 6px;
+  width: 100%;
+  height: 0.6em;
+  background: rgba(169,169,169,0.25);
+  z-index: -1;
+  border-radius: 8px;
 }
 
 .pdf-link {
