--- a/index.html
+++ b/index.html
@@ -351,9 +351,9 @@ h2 {
   font-family: 'Kiwi Maru', cursive;
   color: #8b8484;
   position: relative;
-  display: inline-block;
+  display: block;
   margin-bottom: 30px;
-  font-weight: 350;
+  font-weight: 300;
 }
 
 .pc-title::before {
@@ -433,10 +433,10 @@ h2 {
   font-family: 'Kiwi Maru', cursive;
   color: #8b8484;
   position: relative;
-  display: inline-block;
+  display: block;
   margin-top: 70px;
   margin-bottom: 15px;
-  font-weight: 350;
+  font-weight: 300;
 }
 
 .access-title::before {
@@ -525,7 +525,7 @@ h2 {
   display: block;
   font-family: 'Kiwi Maru', cursive;
   color: #8b8484;
-  font-weight: 350;
+  font-weight: 300;
 }
 
 .contact-title::before {
@@ -616,10 +616,10 @@ h2 {
   font-family: 'Kiwi Maru', cursive;
   color: #8b8484;
   position: relative;
-  display: inline-block;
+  display: block;
   margin-top: 70px;
   margin-bottom: 15px;
-  font-weight: 350;
+  font-weight: 300;
 }
 
 .pdf-title::before {
