--- a/index.html
+++ b/index.html
@@ -779,7 +779,7 @@ footer {
   </iframe>
 </section>
 
-  <h2 class="section-title">自己評価</h2>
+  <h2 class="section-title" id="pdf">自己評価</h2>
 
 <div class="pdf-section">
   <a
