--- a/index.html
+++ b/index.html
@@ -779,8 +779,8 @@ footer {
   </iframe>
 </section>
 
-  <h2 class="section-title" id="pdf">自己評価</h2>
-
+  <h2 class="pc-title" id="pdf">自己評価</h2>
+  
 <div class="pdf-section">
   <a
     href="https://drive.google.com/file/d/【ファイルID】/view"
