--- a/index.html
+++ b/index.html
@@ -794,7 +794,7 @@ footer {
   
 <div class="pdf-section">
   <a
-    href="https://drive.google.com/file/d/【ファイルID】/view"
+    href="https://drive.google.com/drive/folders/1NmOLDGZwY4wSL_vmvprMphlWRe6yt-U0?usp=sharing/view"
     target="_blank"
     class="pdf-link"
   >
