--- a/index.html
+++ b/index.html
@@ -798,7 +798,7 @@ footer {
     target="_blank"
     class="pdf-link"
   >
-    年度別自己評価一覧 (PDF)
+    年度別自己評価一覧<br>(Googleドライブに遷移します)
   </a>
 </div>
 
