--- a/index.html
+++ b/index.html
@@ -661,6 +661,10 @@ h2 {
   color: #fff;
   transform: translateY(-2px);
 }
+  .pdf-note {
+  font-size: 0.75em;
+  opacity: 0.8;
+}
 /* =================================================
    フッター
 ================================================= */
@@ -798,7 +802,8 @@ footer {
     target="_blank"
     class="pdf-link"
   >
-    年度別自己評価一覧<br>(Googleドライブに遷移します)
+    年度別自己評価一覧<br>
+  <span class="pdf-note">（Googleドライブに遷移します）</span>
   </a>
 </div>
 
