--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@ h2 {
   .header-center {
     font-size: 1.2em;
     line-height: 1.3;
+    white-space: nowrap;   /* ← 改行させない */
   }
 
   /* ☰ は常に右 */
