--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ h2 {
   display: grid;
   grid-template-columns: auto 1fr auto;
   align-items: center;
-  padding: 0 20px;
+  column-gap: 40px;
 }
 
 /* ロゴ・メニュー文字 */
