--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ body {
 /* ------------------ ヘッダー ------------------ */
 header {
   background-color: rgba(169,169,169,0.5);
-  padding: 22px 20px;
+  padding: 32px 20px;
   position: sticky;
   top: 0;
   z-index: 1000;
@@ -52,6 +52,7 @@ h2 {
   grid-template-columns: auto 1fr auto;
   align-items: center;
   column-gap: 40px;
+  padding: 0 20px;
 }
 
 /* ロゴ・メニュー文字 */
