--- a/index.html
+++ b/index.html
@@ -755,6 +755,7 @@ footer {
   <span class="arrow流れ">∨</span>
 </button>
       <div id="content流れ" class="content流れ">
+        <div class="access-section">
         <img src="ご利用の流れ.png" alt="ご利用開始までの流れ">
       </div>
     </div>
@@ -766,6 +767,7 @@ footer {
   <span class="arrow料金">∨</span>
 </button>
       <div id="content料金" class="content料金">
+        <div class="access-section">
         <img src="料金.png" alt="ご利用料金">
       </div>
     </div>
