--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@ h2 {
   position: absolute;
   left: 20px;
   bottom: 6px;
-  width: 30px;
+  width: 90%;
   height: 0.6em;
   background: rgba(169,169,169,0.25);
   z-index: -1;
