--- a/index.html
+++ b/index.html
@@ -363,10 +363,10 @@ h2 {
 .pc-title::before {
   content: "";
   position: absolute;
-  left: 20px;
+  left: 80px;
   bottom: 6px;
-  width: 90%;
-  height: 0.6em;
+  width: 420px;
+  height: 0.9em;
   background: rgba(169,169,169,0.25);
   z-index: -1;
   border-radius: 8px;
