--- a/index.html
+++ b/index.html
@@ -363,13 +363,13 @@ h2 {
 .pc-title::before {
   content: "";
   position: absolute;
-  left: 80px;
+  right: 80px;
   bottom: 6px;
   width: 420px;
   height: 0.9em;
   background: rgba(169,169,169,0.25);
   z-index: -1;
-  border-radius: 8px;
+  border-radius: 15px;
 }
 
 /* ===============================
