--- a/index.html
+++ b/index.html
@@ -370,6 +370,7 @@ h2 {
   background: rgba(169,169,169,0.25);
   z-index: -1;
   border-radius: 15px;
+  transform: translateX(-50%);
 }
 
 /* ===============================
