--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@ h2 {
   display: block;
   margin-bottom: 30px;
   font-weight: 300;
-  transform: translateX(-350px);
+  left: 10px;
 }
 
 .pc-title::before {
