--- a/index.html
+++ b/index.html
@@ -439,29 +439,29 @@ h2 {
   font-family: 'M PLUS Rounded 1c', sans-serif;
 }
 .access-title {
-  width: 100%;
+ width: 100%;
   text-align: center;
   font-size: 1.6em;
   font-family: 'Kiwi Maru', cursive;
   color: #8b8484;
   position: relative;
   display: block;
-  margin-top: 70px;
-  margin-bottom: 15px;
+  margin-bottom: 30px;
   font-weight: 300;
-  transform: translateX(-350px);
+  left: -350px;
 }
 
 .access-title::before {
-  content: "";
+ content: "";
   position: absolute;
-  left: -350px;
-  bottom: 6px;
-  width: 100%;
-  height: 0.6em;
+  right: 10px;
+  bottom: -1px;
+  width: 1100px;
+  height: 0.8em;
   background: rgba(169,169,169,0.25);
   z-index: -1;
-  border-radius: 8px;
+  border-radius: 15px;
+  transform: translateX(-50%);
 }
 
   @media (max-width: 480px) {
@@ -533,25 +533,26 @@ h2 {
   width: 100%;
   text-align: center;
   font-size: 1.6em;
-  margin: 80px 0 20px;
-  position: relative;
-  display: block;
   font-family: 'Kiwi Maru', cursive;
   color: #8b8484;
+  position: relative;
+  display: block;
+  margin-bottom: 30px;
   font-weight: 300;
-  transform: translateX(-10px);
+  left: -350px;
 }
 
 .contact-title::before {
   content: "";
   position: absolute;
-  left: -35px;
-  bottom: 6px;
-  width: 100%;
-  height: 0.6em;
+  right: 10px;
+  bottom: -1px;
+  width: 1100px;
+  height: 0.8em;
   background: rgba(169,169,169,0.25);
   z-index: -1;
-  border-radius: 8px;
+  border-radius: 15px;
+  transform: translateX(-50%);
 }
   
 .contact-cta {
