--- a/index.html
+++ b/index.html
@@ -748,8 +748,8 @@ footer {
   <div class="slider-dots sp-dots"></div>
 </div>
  
- <div class="toggle-container流れ" id="flow">
-  <h2 class="pc-title">ご利用開始までの流れ</h2>
+ <div class="toggle-container流れ">
+  <h2 class="pc-title" id="flow">ご利用開始までの流れ</h2>
       <button class="toggle-button流れ" onclick="toggleContent流れ()">
   ご利用開始までの流れ
   <span class="arrow流れ">∨</span>
@@ -760,8 +760,8 @@ footer {
       </div>
     </div>
     
-   <div class="toggle-container料金" id="price">
-  <h2 class="pc-title">ご利用料金について</h2>
+   <div class="toggle-container料金">
+  <h2 class="pc-title" id="price">ご利用料金について</h2>
      <button class="toggle-button料金" onclick="toggleContent料金()">
   ご利用料金
   <span class="arrow料金">∨</span>
