--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@ h2 {
 .access-section {
   max-width: 900px;
   margin: 30px auto 50px;
-  padding: 25px;
+  padding: 25px 0 50px;
   background: rgba(255,255,255,0.75);
   border-radius: 20px;
   text-align: left;
