--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@ h2 {
   padding-top: 56%;
   border-radius: 15px;
   overflow: hidden;
-  max-width: 670px;
+  max-width: 680px;
   margin: 0 auto;  
 }
 
@@ -794,7 +794,7 @@ footer {
 <h2 class="contact-title" id="contact">お問い合わせ</h2>
 
   <div class="contact-cta">
-  <a href="#" id="contact-cta-btn">お問い合わせはこちら</a>
+  <a href="#" id="contact-cta-btn">お問い合わせはこちらをクリック</a>
 </div>
 
 <section id="contact-section" class="contact-form">
@@ -810,7 +810,7 @@ footer {
     target="_blank"
     class="pdf-link"
   >
-    年度別自己評価一覧<br>
+    年度別自己評価一覧(PDF)<br>
   <span class="pdf-note">（Googleドライブに遷移します）</span>
   </a>
 </div>
