--- a/index.html
+++ b/index.html
@@ -794,7 +794,7 @@ footer {
 <h2 class="contact-title" id="contact">お問い合わせ</h2>
 
   <div class="contact-cta">
-  <a href="#" id="contact-cta-btn">お問い合わせはこちらをクリック</a>
+  <a href="#" id="contact-cta-btn">お問い合わせはこちら</a>
 </div>
 
 <section id="contact-section" class="contact-form">
