--- a/index.html
+++ b/index.html
@@ -622,6 +622,7 @@ h2 {
   text-align: center;
   margin: 40px 0 80px;
   font-family: 'M PLUS Rounded 1c', sans-serif;
+  line-height: 1.3;
 }
 
   .pdf-title {
@@ -811,7 +812,7 @@ footer {
     class="pdf-link"
   >
     年度別自己評価一覧(PDF)<br>
-  <span class="pdf-note">（Googleドライブに遷移します）</span>
+  <span class="pdf-note">Googleドライブに遷移します</span>
   </a>
 </div>
 
