--- a/index.html
+++ b/index.html
@@ -681,6 +681,16 @@ footer {
   padding: 20px;
   font-family: 'Kiwi Maru', cursive;
 }
+
+  .footer-links a {
+  font-size: 0.8em;
+  color: #9F987D;
+  text-decoration: none;
+}
+
+.footer-links a:hover {
+  text-decoration: underline;
+}
   
 </style>
 </head>
@@ -819,6 +829,8 @@ footer {
 <footer>
   <p class="small-text">
     © 合同会社ノワール
+  <p class="footer-links">
+    <a href="privacy.html">プライバシーポリシー</a>
   </p>
 </footer>
 
