--- a/index.html
+++ b/index.html
@@ -680,6 +680,37 @@ footer {
   text-align: center;
   padding: 20px;
   font-family: 'Kiwi Maru', cursive;
+  background: #f7f5f2;
+  padding: 30px 15px;
+  text-align: center;
+  font-size: 0.8em;
+  color: #8b8484;
+}
+
+.footer-name {
+  font-weight: 400;
+  margin-bottom: 10px;
+}
+
+.footer-info {
+  line-height: 1.6;
+  margin-bottom: 15px;
+}
+
+.footer-links a {
+  color: #9F987D;
+  text-decoration: none;
+  font-size: 0.85em;
+}
+
+.footer-links a:hover {
+  text-decoration: underline;
+}
+
+.footer-copy {
+  margin-top: 15px;
+  font-size: 0.75em;
+  color: #aaa;
 }
 
   .footer-links a {
@@ -827,6 +858,11 @@ footer {
 </div>
 
 <footer>
+   <p class="footer-info">
+    〒950-0000<br>
+    新潟県新潟市〇〇区〇〇町0-0-0<br>
+    TEL：025-000-0000
+  </p>
   <p class="small-text">
     © 合同会社ノワール
   <p class="footer-links">
