--- a/index.html
+++ b/index.html
@@ -863,11 +863,11 @@ footer {
     新潟県新潟市〇〇区〇〇町0-0-0<br>
     TEL：025-000-0000
   </p>
-  <p class="small-text">
-    © 合同会社ノワール
-  <p class="footer-links">
-    <a href="privacy.html">プライバシーポリシー</a>
-  </p>
+ <div class="footer-bottom">
+    <span class="footer-copy">© 2026 合同会社ノワール</span>
+    <span class="footer-sep">｜</span>
+    <a href="privacy.html" class="footer-privacy">プライバシーポリシー</a>
+  </div>
 </footer>
 
 <script>
