--- a/index.html
+++ b/index.html
@@ -859,9 +859,8 @@ footer {
 
 <footer>
    <p class="footer-info">
-    〒950-0000<br>
-    新潟県新潟市〇〇区〇〇町0-0-0<br>
-    TEL：025-000-0000
+    〒950-0861    新潟県新潟市東区中山6-19-5  ウェル新潟ビル206<br>
+    TEL：025-290-7625
   </p>
  <div class="footer-bottom">
     <span class="footer-copy">© 2026 合同会社ノワール</span>
