--- a/index.html
+++ b/index.html
@@ -865,7 +865,7 @@ footer {
 <footer>
    <p class="footer-info">
     〒950-0861    新潟県新潟市東区中山6-19-5  ウェル新潟ビル206<br>
-    TEL：025-290-7625
+    TEL：025-290-7625   MAIL：noir.niigata@gmail.com
   </p>
  <div class="footer-bottom">
     <span class="footer-copy">© 2026 合同会社ノワール</span>
