--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@ h2 {
   text-align: center;
   margin: 40px 0 80px;
   font-family: 'M PLUS Rounded 1c', sans-serif;
-  line-height: 1.3;
+  line-height: 1;
 }
 
   .pdf-title {
@@ -683,7 +683,7 @@ footer {
   padding: 30px 15px;
   text-align: center;
   font-size: 1em;
-  color: #8b8484;
+  color: #9F987D;
 }
 
 .footer-name {
@@ -707,13 +707,13 @@ footer {
 }
 
   .footer-privacy {
-  color: #8b8484;   /* 好きな色に */
+  color: #9F987D;   /* 好きな色に */
   text-decoration: none;
 }
 
 /* 押したあと・見たあとも青くしない */
 .footer-privacy:visited {
-  color: #8b8484;
+  color: #9F987D;
 }
 
 /* ホバー時（任意） */
@@ -865,8 +865,10 @@ footer {
 <footer>
    <p class="footer-info">
     〒950-0861    新潟県新潟市東区中山6-19-5  ウェル新潟ビル206<br>
-    TEL：025-290-7625   MAIL：noir.niigata@gmail.com
+  <span class="footer-tel">TEL：025-290-7625</span>
+  <span class="footer-mail">MAIL：noir.niigata@gmail.com</span>
   </p>
+  
  <div class="footer-bottom">
     <span class="footer-copy">© 2026 合同会社ノワール</span>
     <span class="footer-sep">｜</span>
