--- a/index.html
+++ b/index.html
@@ -727,6 +727,14 @@ footer {
   font-size: 0.9em;
   color: #aaa;
 }
+
+.footer-tel {
+  margin-right: 12px; /* ← ここで空ける */
+}
+
+.footer-address span {
+  display: inline-block;
+}
   
 </style>
 </head>
