--- a/index.html
+++ b/index.html
@@ -681,13 +681,14 @@ footer {
   text-align: center;
   font-family: 'Kiwi Maru', cursive;
   font-size: 1em;
-  color: #9F987D;
+  color: #aaa;
 }
 
 /* 住所まわり */
 .footer-address {
   line-height: 1.6;
   margin-bottom: 15px;
+  font-size: 0.9em;
 }
 
 .footer-address span {
@@ -696,7 +697,9 @@ footer {
 
 /* 電話とメールの間隔 */
 .footer-tel {
-  margin-right: 12px;
+  margin-right: 15px;
+  font-size: 0.9em;
+
 }
 
 /* 下段（コピーライト・リンク） */
@@ -710,7 +713,7 @@ footer {
 .footer-privacy {
   color: #aaa;
   text-decoration: none;
-  font-size: 0.8em;
+  font-size: 0.9em;
 }
 
 .footer-privacy:visited {
