--- a/index.html
+++ b/index.html
@@ -697,9 +697,12 @@ footer {
 
 /* 電話とメールの間隔 */
 .footer-tel {
-  margin-right: 15px;
+  margin-right: 18px;
   font-size: 0.9em;
+}
 
+.footer-mail {
+  font-size: 0.9em;
 }
 
 /* 下段（コピーライト・リンク） */
