--- a/privacy.html
+++ b/privacy.html
@@ -6,13 +6,18 @@
   <title>プライバシーポリシー｜合同会社ノワール</title>
 
   <style>
-    body {
-      font-family: 'Kiwi Maru', cursive;
-      background: #fff;
-      color: #635656;
-      margin: 0;
-      padding: 0;
-    }
+   body {
+     font-family: 'Kiwi Maru', cursive;
+     color: #635656;
+     margin: 0;
+     padding: 0;
+
+     background-image: url("プライバシーポリシー背景.png");
+     background-size: cover;
+     background-position: center;
+     background-repeat: no-repeat;
+     background-attachment: fixed;
+}
 
     .privacy-wrapper {
       max-width: 900px;
