--- a/index.html
+++ b/index.html
@@ -754,6 +754,7 @@ footer {
   <a href="#price">ご利用料金</a>
   <a href="#access">アクセス</a>
   <a href="#" id="contact-link">お問い合わせ</a>
+  <a href="#pdf-title">自己評価</a>
   <a href="https://www.instagram.com/noir_niigata/" target="_blank" class="insta-link">
     Instagram
   </a>
