--- a/index.html
+++ b/index.html
@@ -727,7 +727,13 @@ footer {
   color: #9F987D;
   text-decoration: underline;
 }
-
+  
+@media (max-width: 768px) {
+  body {
+    background-attachment: scroll;
+  }
+}
+  
 </style>
 </head>
 
