--- a/index.html
+++ b/index.html
@@ -864,7 +864,7 @@ footer {
     target="_blank"
     class="pdf-link"
   >
-    年度別自己評価一覧(PDF)<br>
+    自己評価一覧(PDF)<br>
   <span class="pdf-note">Googleドライブに遷移します</span>
   </a>
 </div>
