--- a/index.html
+++ b/index.html
@@ -372,6 +372,15 @@ h2 {
   transform: none;
 }
 
+  @media (max-width: 480px) {
+  .pc-title::before,
+  .access-title::before,
+  .contact-title::before,
+  .pdf-title::before {
+    width: 40px;   /* ← PCより短く */
+  }
+}
+
 /* ===============================
    スマホだけトグル化
 =============================== */
