--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@ footer {
 }
 
   @media (max-width: 480px) {
-  .pc-title::before,
+  .pc-title.自己評価::before,
   .access-title::before,
   .contact-title::before,
   .pdf-title::before {
