--- a/index.html
+++ b/index.html
@@ -419,8 +419,8 @@ h2 {
 }
   /* スマホでは流れ・料金のPC用タイトルを非表示 */
 @media (max-width: 767px) {
-  #flow > .pc-title,
-  #price > .pc-title {
+  #flow .pc-title,
+  #price .pc-title {
     display: none;
   }
 }
