--- a/index.html
+++ b/index.html
@@ -418,9 +418,9 @@ h2 {
   }
 }
 
-  /* トグル矢印（流れ・料金 共通） */
-#arrow流れ,
-#arrow料金 {
+/* トグル矢印（流れ・料金 共通） */
+.arrow流れ,
+.arrow料金 {
   font-family: 'Kiwi Maru', cursive;
   font-size: 0.7em;
   display: inline-block;
@@ -431,8 +431,8 @@ h2 {
 }
 
 /* 開いたとき */
-#arrow流れ.rotate,
-#arrow料金.rotate {
+.arrow流れ.rotate,
+.arrow料金.rotate {
   transform: scaleX(2) rotate(180deg);
 }
   
