--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@ footer {
 }
 
   @media (max-width: 480px) {
-  .pc-title.自己評価::before,
+  #pdf::before,
   .access-title::before,
   .contact-title::before,
   .pdf-title::before {
