--- a/index.html
+++ b/index.html
@@ -888,7 +888,7 @@ footer {
   
 <div class="pdf-section">
   <a
-    href="https://drive.google.com/drive/folders/1NmOLDGZwY4wSL_vmvprMphlWRe6yt-U0?usp=sharing/view"
+    href="自己評価.html"
     target="_blank"
     class="pdf-link"
   >
