--- a/index.html
+++ b/index.html
@@ -892,8 +892,7 @@ footer {
     target="_blank"
     class="pdf-link"
   >
-    自己評価一覧(PDF)<br>
-  <span class="pdf-note">Googleドライブに遷移します</span>
+    自己評価一覧(PDF)
   </a>
 </div>
 
