--- a/自己評価.html
+++ b/自己評価.html
@@ -1,88 +1,128 @@
 <!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>自己評価一覧｜発達支援ノワール</title>
 
+  <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru&display=swap" rel="stylesheet">
 
-.pdf-list li {
-margin-bottom: 20px;
-}
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Kiwi Maru', cursive;
+      background: #fff;
+      color: #9F987D;
+      text-align: center;
+    }
 
+    header {
+      padding: 40px 20px 20px;
+    }
 
-.pdf-list a {
-display: inline-block;
-padding: 12px 20px;
-border-radius: 10px;
-border: 1px solid #ccc;
-background: rgba(255,255,255,0.6);
-color: #9F987D;
-text-decoration: none;
-font-size: 1em;
-transition: all 0.3s ease;
-}
+    h1 {
+      font-size: 1.6em;
+      font-weight: 300;
+      position: relative;
+      display: inline-block;
+      margin-bottom: 30px;
+    }
 
+    h1::before {
+      content: "";
+      position: absolute;
+      left: 50%;
+      bottom: -6px;
+      transform: translateX(-50%);
+      width: 180px;
+      height: 0.6em;
+      background: rgba(169,169,169,0.25);
+      border-radius: 12px;
+      z-index: -1;
+    }
 
-.pdf-list a:hover {
-background: #b5a695;
-color: #fff;
-transform: translateY(-2px);
-}
+    main {
+      max-width: 600px;
+      margin: 0 auto 60px;
+      padding: 0 20px;
+    }
 
+    .pdf-list {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
 
-.back-home {
-margin-top: 40px;
-}
+    .pdf-list li {
+      margin-bottom: 20px;
+    }
 
+    .pdf-list a {
+      display: inline-block;
+      padding: 12px 20px;
+      border-radius: 10px;
+      border: 1px solid #ccc;
+      background: rgba(255,255,255,0.6);
+      color: #9F987D;
+      text-decoration: none;
+      font-size: 1em;
+      transition: all 0.3s ease;
+    }
 
-.back-home a {
-font-size: 0.9em;
-color: #9F987D;
-text-decoration: underline;
-}
+    .pdf-list a:hover {
+      background: #b5a695;
+      color: #fff;
+      transform: translateY(-2px);
+    }
 
+    .back-home {
+      margin-top: 40px;
+    }
 
-.back-home a:hover {
-opacity: 0.7;
-}
+    .back-home a {
+      font-size: 0.9em;
+      color: #9F987D;
+      text-decoration: underline;
+    }
 
+    .back-home a:hover {
+      opacity: 0.7;
+    }
 
-footer {
-font-size: 0.85em;
-color: #aaa;
-padding-bottom: 30px;
-}
+    footer {
+      font-size: 0.85em;
+      color: #aaa;
+      padding-bottom: 30px;
+    }
 
-
-@media (max-width: 480px) {
-h1::before {
-width: 80px;
-}
-}
-</style>
+    @media (max-width: 480px) {
+      h1::before {
+        width: 80px;
+      }
+    }
+  </style>
 </head>
 <body>
 
-
 <header>
-<h1>自己評価一覧</h1>
+  <h1>自己評価一覧</h1>
 </header>
 
-
 <main>
-<ul class="pdf-list">
-<li>
-<a href="PDFのURLをここに" target="_blank">自己評価資料（PDF）</a>
-</li>
-</ul>
+  <ul class="pdf-list">
+    <li>
+      <a href="PDFのURLをここに" target="_blank">自己評価資料（PDF）</a>
+    </li>
+  </ul>
 
-
-<div class="back-home">
-<a href="index.html">トップページに戻る</a>
-</div>
+  <div class="back-home">
+    <a href="index.html">トップページに戻る</a>
+  </div>
 </main>
 
-
 <footer>
-© 合同会社ノワール
+  © 合同会社ノワール
 </footer>
-
 
 </body>
 </html>
