--- a/自己評価.html
+++ b/自己評価.html
@@ -126,3 +126,74 @@
 
 </body>
 </html>
+    }
+
+    .pdf-list a {
+      display: inline-block;
+      padding: 12px 20px;
+      border-radius: 10px;
+      border: 1px solid #ccc;
+      background: rgba(255,255,255,0.6);
+      color: #9F987D;
+      text-decoration: none;
+      font-size: 1em;
+      transition: all 0.3s ease;
+    }
+
+    .pdf-list a:hover {
+      background: #b5a695;
+      color: #fff;
+      transform: translateY(-2px);
+    }
+
+    .back-home {
+      margin-top: 40px;
+    }
+
+    .back-home a {
+      font-size: 0.9em;
+      color: #9F987D;
+      text-decoration: underline;
+    }
+
+    .back-home a:hover {
+      opacity: 0.7;
+    }
+
+    footer {
+      font-size: 0.85em;
+      color: #aaa;
+      padding-bottom: 30px;
+    }
+
+    @media (max-width: 480px) {
+      h1::before {
+        width: 80px;
+      }
+    }
+  </style>
+</head>
+<body>
+
+<header>
+  <h1>自己評価一覧</h1>
+</header>
+
+<main>
+  <ul class="pdf-list">
+    <li>
+      <a href="PDFのURLをここに" target="_blank">自己評価資料（PDF）</a>
+    </li>
+  </ul>
+
+  <div class="back-home">
+    <a href="index.html">トップページに戻る</a>
+  </div>
+</main>
+
+<footer>
+  © 合同会社ノワール
+</footer>
+
+</body>
+</html>
