--- a/privacy.html
+++ b/privacy.html
@@ -12,7 +12,7 @@
      margin: 0;
      padding: 0;
 
-     background-image: url("プライバシーポリシー背景.png");
+     background-image: url("外部ページ背景.png");
      background-size: cover;
      background-position: center;
      background-repeat: no-repeat;
